fix wrap

--- a/src/shared/components/Footer/Footer.module.scss
+++ b/src/shared/components/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-end;
   flex-wrap: wrap;
   padding: 20px;
