--- a/src/shared/components/Header/Header.module.scss
+++ b/src/shared/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
   padding: 20px;
